--- a/.github/workflows/FundDataWorkflow.yml
+++ b/.github/workflows/FundDataWorkflow.yml
@@ -62,11 +62,11 @@ jobs:
 
       - name: PullLatestChanges
         if: steps.commit.outputs.has_changes == 'true'
-        run: git pull --rebase origin auto-commit
+        run: git pull --rebase origin auto
 
       - name: PushChanges
         if: steps.commit.outputs.has_changes == 'true'
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: auto-commit
+          branch: auto
