--- a/.github/workflows/MetadataWorkflow.yml
+++ b/.github/workflows/MetadataWorkflow.yml
@@ -1,5 +1,5 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-name: FundDataWorkflow
+name: MetadataWorkflow
 
 on:
   workflow_dispatch: # 允许手动触发
